--- a/frontend/src/App.css
+++ b/frontend/src/App.css
@@ -37,56 +37,6 @@
   background-size: 20px;
 }
 
-.wallpapers {
-  line-height: 0;
-  -webkit-column-count: 5;
-  -webkit-column-gap: 0px;
-  -moz-column-count: 5;
-  -moz-column-gap: 0px;
-  column-count: 5;
-  column-gap: 0px;
-
-  background-color: #efefef;
-}
-
-.wallpapers img {
-  width: 100% !important;
-  height: auto !important;
-  padding: 2px 4px;
-}
-
-@media (max-width: 1200px) {
-  #photos {
-    -moz-column-count: 4;
-    -webkit-column-count: 4;
-    column-count: 4;
-  }
-}
-
-@media (max-width: 1000px) {
-  #photos {
-    -moz-column-count: 3;
-    -webkit-column-count: 3;
-    column-count: 3;
-  }
-}
-
-@media (max-width: 800px) {
-  #photos {
-    -moz-column-count: 2;
-    -webkit-column-count: 2;
-    column-count: 2;
-  }
-}
-
-@media (max-width: 400px) {
-  #photos {
-    -moz-column-count: 1;
-    -webkit-column-count: 1;
-    column-count: 1;
-  }
-}
-
 .filters ul {
   font-weight: bold;
   list-style: none;
@@ -113,5 +63,5 @@
 }
 
 .filters ul li.selected {
-  background: linear-gradient(45deg, #06161f 0%, #85d8ce 50%, #087856 100%);
+  background: linear-gradient(45deg, #06161f 0%, #85d8ce 50%, #33cc18 100%);
 }
